syntax = "proto3";
package messagePb.v1;
import "google/protobuf/empty.proto";
option go_package="message/api/qvbilam/message/v1;messageV1";

message MessageResponse {
  string UID = 1;
  string Type = 2;
  string Content = 3;
  string Url = 4;
  string extra = 5;
}

message MessageRequest {
  string Type = 1;
  string Content = 2;
  string Url = 3;
  string extra = 4;
}

message CreatePrivateRequest {
  int64 UserId = 1;
  int64 TargetUserId = 2;
  MessageRequest Message = 3;
}

message CreateRoomRequest {
  int64 UserId = 1;
  int64 RoomId = 2;
  MessageRequest Message = 3;
}

message CreateGroupRequest{
  int64 UserId = 1;
  int64 GroupId = 2;
  MessageRequest Message = 3;
}

message UpdateQueueRequest {
  string Name = 1;
  string ExchangeName = 2;
  int64 Status = 3;
}

message QueueResponse {
  string Name = 1;
  string ExchangeName = 2;
}

service Message {
  rpc CreateQueue (UpdateQueueRequest) returns (QueueResponse);
  rpc UpdateQueue (UpdateQueueRequest) returns (google.protobuf.Empty);
  rpc DeleteQueue (UpdateQueueRequest) returns (google.protobuf.Empty);
  rpc CreatePrivateMessage (CreatePrivateRequest) returns (google.protobuf.Empty);
  rpc CreateRoomMessage(CreateRoomRequest) returns (google.protobuf.Empty);
  rpc CreateGroupMessage(CreateGroupRequest) returns (google.protobuf.Empty);
}
